--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -20,6 +20,7 @@
             <a href="{% url 'core:about' %}" class="btn-custom">About</a>
             <a href="{% url 'core:title' %}" class="btn-custom">Title</a>
             <a href="{% url 'core:contact' %}" class="btn-custom">Contact</a>
+            <a href="{% url 'core:sample' %}" class='btn-custom'>Sample</a>
         </nav>
     </header>
     <hr>
