--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -18,9 +18,8 @@
         <nav>
             <a href="{% url 'core:home' %}" class="btn-custom">Home</a>
             <a href="{% url 'core:about' %}" class="btn-custom">About</a>
-            <a href="{% url 'core:title' %}" class="btn-custom">Title</a>
             <a href="{% url 'core:contact' %}" class="btn-custom">Contact</a>
-            <a href="{% url 'core:sample' %}" class='btn-custom'>Sample</a>
+            <a href="{% url 'core:cart_detail' %}" class="btn-custom">Cart detail</a>
         </nav>
     </header>
     <hr>
