--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -3,4 +3,6 @@
 {% block content %}
 <h2>Home Page</h2>
 <p>Welcome to Project P</p>
+
+<a href="{% url 'core:product_list' %}" class="btn-custom">List Products</a>
 {% endblock  %}
