--- a/core/templates/core/product_form.html
+++ b/core/templates/core/product_form.html
@@ -6,5 +6,12 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Save</button>
+  {% if form.instance.pk %}
+  <a href="{% url 'core:product_detail' form.instance.pk %}">Back</a>
+  {% else %}
+    <a href="{% url 'core:product_list' %}">Back</a>
+  {% endif %}
+
 </form>
+
 {% endblock %}
