--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,9 +16,8 @@
     <header>
         <h1>Project 1</h1>
         <nav>
-            <a href="{% url 'core:product_list' %}" class="btn-custom">Home</a>
-            {% comment %} <a href="{% url 'core:product_detail' %}" class="btn-custom">About</a> {% endcomment %}
-            {% comment %} <a href="{% url 'core:contact' %}" class="btn-custom">Contact</a> {% endcomment %}
+            
+            <a href="{% url 'core:home' %}" class="btn-custom">Home</a>
         </nav>
     </header>
     <hr>
