--- a/core/templates/core/product_delete.html
+++ b/core/templates/core/product_delete.html
@@ -1,6 +1,9 @@
 {% extends "core/base.html" %}
+
 {% block content %}
-<h2>Delete {{ product.name }}?</h2>
+<h2>Delete "{{ product.name }}"?</h2>
+
+<p>Are you sure you want to delete this product?</p>
 
 <form method="post">
   {% csrf_token %}
