--- a/core/templates/core/product_detail.html
+++ b/core/templates/core/product_detail.html
@@ -3,13 +3,14 @@
 <h2>{{ product.name }}</h2>
 <p>Price: {{ product.price }}</p>
 <p>Category: {{ product.category }}</p>
+<p>Active: {{ product.is_active }} </p>
 
 <a href="{% url 'core:product_update' product.id %}">Edit</a>
 
-<form method="post" action="{% url 'core:product_delete' product.id %}">
-  {% csrf_token %}
-  <button type="submit">Delete</button>
-</form>
+<a href="{% url 'core:product_delete' product.id %}">
+  Delete
+</a>
+
 
 <a href="{% url 'core:product_list' %}">Back</a>
 {% endblock %}
